--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5CK6V99L6P"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5CK6V99L6P');
+  </script>
+
     <title>iP Agência Digital</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -16,6 +26,7 @@
     <link rel="stylesheet" href="css/style.css">
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
   </head>
+  
   <body>
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="Você está usando um versão antiga do navegador. Para uma melhor experiência atualize gratuitamente seu navegador."></a></div>
     <div class="page">
@@ -39,8 +50,9 @@
                       <!-- RD Navbar Share-->
                       <div class="rd-navbar-share fl-bigmug-line-share27" data-rd-navbar-toggle=".rd-navbar-share-list">
                         <ul class="list-inline rd-navbar-share-list">
-                          <li class="rd-navbar-share-list-item" onclick="window.open('https://www.instagram.com/ip.agenciadigital/')"><a class="icon fa fa-whatsapp" target="_blank" href="https://api.whatsapp.com/send?phone=5512992216075&text=Ol%C3%A1%2C%20vim%20pelo%20seu%20site."></a></li>
-                          <li class="rd-navbar-share-list-item" onclick="window.open('https://api.whatsapp.com/send?phone=5512992216075&text=Ol%C3%A1%2C%20vim%20pelo%20seu%20site.')"><a class="icon fa fa-instagram" target="_blank" href="https://instagram.com/danieldavid4889"></a></li>
+                          <li class="rd-navbar-share-list-item" onclick="window.open('https://api.whatsapp.com/send?phone=5512992216075&text=Ol%C3%A1%2C%20vim%20pelo%20seu%20site.')"><a class="icon fa fa-whatsapp" target="_blank" href="https://api.whatsapp.com/send?phone=5512992216075&text=Ol%C3%A1%2C%20vim%20pelo%20seu%20site."></a></li>
+                          <li class="rd-navbar-share-list-item" onclick="window.open('https://www.facebook.com/ipagenciadigital.br')"><a class="icon fa fa-facebook" target="_blank" href="https://www.facebook.com/ipagenciadigital.br"></a></li>
+                          <li class="rd-navbar-share-list-item" onclick="window.open('https://www.instagram.com/ip.agenciadigital/')"><a class="icon fa fa-instagram" target="_blank" href="https://instagram.com/ip.agenciadigital"></a></li>
                         </ul>
                       </div>
                       <ul class="rd-navbar-nav">
@@ -164,7 +176,7 @@
       <!-- Latest Projects-->
       <section class="section section-sm section-fluid bg-default text-center" id="projects">
         <div class="container-fluid">
-          <h2 class="wow fadeInLeft">Nossos projetos</h2>
+          <h2 class="wow fadeInLeft">Alguns projetos</h2>
           <p class="quote-jean wow fadeInRight" data-wow-delay=".1s">Nossos mais recentes produtos desenvolvidos para nossos clientes para diferentes finalidades corporativas. Nossa equipe qualificada de designers de interface e desenvolvedores de software está sempre pronta para criar algo único para você.</p>
           <div class="isotope-filters isotope-filters-horizontal">
             <button class="isotope-filters-toggle button button-md button-icon button-icon-right button-default-outline button-wapasha" data-custom-toggle="#isotope-3" data-custom-toggle-hide-on-blur="true" data-custom-toggle-disable-on-blur="true"><span class="icon fa fa-caret-down"></span>Filtrar</button>
@@ -602,7 +614,7 @@
         <div class="container">
           <div class="row row-30 row-xl-24 justify-content-center align-items-center align-items-lg-start text-left">
             <div class="col-md-6 col-lg-5 col-xl-4 text-center"><a class="text-img" href="javascript:void(0)">
-                <div id="particles-js"></div><span class="counter">3</span></a></div>
+                <div id="particles-js"></div><span class="counter">5</span></a></div>
             <div class="col-sm-8 col-md-6 col-lg-5 col-xl-4">
               <div class="text-width-extra-small offset-top-lg-24 wow fadeInUp">
                 <h3 class="title-decoration-lines-left">Anos de experiência</h3>
@@ -653,19 +665,28 @@
           <div class="row row-sm row-30 justify-content-center">
             <div class="col-md-6 col-lg-5 col-xl-3 wow fadeInRight">
               <!-- Team Classic-->
-              <article class="team-classic team-classic-lg"><a class="team-classic-figure" href="javascript:void(0)"><img src="images/team-11-420x424.jpg" alt="" width="420" height="424"/></a>
+              <article class="team-classic team-classic-lg"><a class="team-classic-figure" href="https://instagram.com/danieldavid4889"><img src="images/team-11-420x424.jpg" alt="" width="420" height="424"/></a>
                 <div class="team-classic-caption">
                   <h4 class="team-classic-name"><a href="https://instagram.com/danieldavid4889">Daniel David</a></h4>
                   <p class="team-classic-status">Designer, social media e desenvolvedor full-stack</p>
                 </div>
               </article>
             </div>
-            <div class="col-md-6 col-lg-5 col-xl-3 wow fadeInRight">
+            <div class="col-md-6 col-lg-5 col-xl-3 wow fadeInDown">
               <!-- Team Classic-->
-              <article class="team-classic team-classic-lg"><a class="team-classic-figure" href="javascript:void(0)"><img src="images/team-12-420x424.jpg" alt="" width="420" height="424"/></a>
+              <article class="team-classic team-classic-lg"><a class="team-classic-figure" href="https://instagram.com/ricardo.marzanos3"><img src="images/team-12-420x424.jpg" alt="" width="420" height="424"/></a>
                 <div class="team-classic-caption">
                   <h4 class="team-classic-name"><a href="https://instagram.com/ricardo.marzanos3">Ricardo Marzano</a></h4>
-                  <p class="team-classic-status">CEO, manager assistent e desenvolvedor full-stack</p>
+                  <p class="team-classic-status">Manager assistent e desenvolvedor full-stack</p>
+                </div>
+              </article>
+            </div>
+            <div class="col-md-6 col-lg-5 col-xl-3 wow fadeInLeft">
+              <!-- Team Classic-->
+              <article class="team-classic team-classic-lg"><a class="team-classic-figure" href="javascript:void(0)"><img src="images/team-13-420x424.jpg" alt="" width="420" height="424"/></a>
+                <div class="team-classic-caption">
+                  <h4 class="team-classic-name"><a href="javascript:void(0)">Rafael</a></h4>
+                  <p class="team-classic-status">Designer, social media, programador Fivem e front end.</p>
                 </div>
               </article>
             </div>
@@ -956,6 +977,7 @@
                 <div class="col-sm-6 col-md-4 text-sm-right text-md-center">
                   <div>
                     <ul class="list-inline list-inline-sm footer-social-list-2">
+                      <li onclick="window.open('https://www.facebook.com/ipagenciadigital.br')"><a class="icon fa fa-facebook" target="_blank" href="https://www.facebook.com/ipagenciadigital.br"></a></li>
                       <li onclick="window.open('https://www.instagram.com/ip.agenciadigital/')"><a class="icon fa fa-instagram" target="_blank" href="https://www.instagram.com/ip.agenciadigital/"></a></li>
                       <li onclick="window.open('https://api.whatsapp.com/send?phone=5512992216075&text=Ol%C3%A1%2C%20vim%20pelo%20seu%20site.')"><a class="icon fa fa-whatsapp" target="_blank" href="https://api.whatsapp.com/send?phone=5512992216075&text=Ol%C3%A1%2C%20vim%20pelo%20seu%20site."></a></li>
                     </ul>
@@ -963,7 +985,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 order-sm-first">
                   <!-- Rights-->
-                  <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> <span>iP Agência Digital</span>
+                  <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> <span>iP Agência Digital an extension of An! Digital Agency.</span>
                   </p>
                 </div>
                 <div class="col-sm-6 col-md-4 text-md-right"><span>Todos os direitos reservados.</span> <span></span>
@@ -1023,6 +1045,5 @@
     <!-- Javascript-->
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
-    <!-- coded by Himic-->
   </body>
 </html>
