--- a/windows/403.html
+++ b/windows/403.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erro 403</title>
-    <link rel="icon" href="../images/logo.ico">
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="./css/404.css">
+    <link rel="icon" href="https://ipagenciadigital.tk/images/logo.ico">
+    <link rel="stylesheet" href="https://ipagenciadigital.tk/css/bootstrap.css">
+    <link rel="stylesheet" href="https://ipagenciadigital.tk/windows/css/404.css">
 </head>
 <body>
     <section>
         <div class="container">
             <div class="row text-center">
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                    <img id="svg" src="./img/403 Error Forbidden-amico.svg" alt="" width="100%" height="100%">
+                    <img id="svg" src="https://ipagenciadigital.tk/windows/img/403 Error Forbidden-amico.svg" alt="" width="100%" height="100%">
                 </div>
                 <div class="container2 col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <h1>Acesso não autorizado!</h1>
