slider principal atualizado

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
               <div class="swiper-slide-caption section-md">
                 <div class="container">
                   <h1 data-caption-animate="fadeInLeft" data-caption-delay="0" class="text-white">Desenvolvimento web, desktop e design gráfico</h1>
-                  <p class="text-width-large text-white" data-caption-animate="fadeInRight" data-caption-delay="100">Desenvolvemos sites, plataformas e programas para windows/linux. Fornecemos também serviços de design gráfico para desenvolvimento de artes soltas e peças publicitárias.</p><a class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
+                  <p class="text-width-large text-white" data-caption-animate="fadeInRight" data-caption-delay="100">
+                    Criamos sites modernos, sistemas desktop sob medida e identidades visuais marcantes. Soluções completas para destacar sua marca e impulsionar resultados com tecnologia, performance e design estratégico.
+                  </p><a class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
                 </div>
               </div>
             </div>
@@ -88,7 +90,9 @@
               <div class="swiper-slide-caption section-md">
                 <div class="container">
                   <h1 data-caption-animate="fadeInLeft" data-caption-delay="0" class="text-white">Desenvolvimento mobile</h1>
-                  <p class="text-width-large text-white" data-caption-animate="fadeInRight" data-caption-delay="100">Desenvolvemos aplicativos para dispositivos móveis com a melhor tecnologia existente. Desde aplicativos básicos até chats de conversas e marketplaces.</p><a class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
+                  <p class="text-width-large text-white" data-caption-animate="fadeInRight" data-caption-delay="100">
+                    Criamos aplicativos personalizados para dispositivos móveis utilizando as tecnologias mais avançadas do mercado. Do conceito à publicação, desenvolvemos soluções eficientes e intuitivas — de apps simples até plataformas completas com chat, marketplace e muito mais.
+                  </p><a class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
                 </div>
               </div>
             </div>
@@ -96,7 +100,9 @@
               <div class="swiper-slide-caption section-md">
                 <div class="container">
                   <h1 data-caption-animate="fadeInLeft" data-caption-delay="0" class="text-white">Redes sociais</h1>
-                  <p class="text-width-large text-white" data-caption-animate="fadeInRight" data-caption-delay="100">Ta afogado em tarefas? Deixe-nos te auxiliar na organização e gerenciamento de suas redes sociais.</p><a class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
+                  <p class="text-width-large text-white" data-caption-animate="fadeInRight" data-caption-delay="100">
+                    Fortalecemos sua presença online com conteúdo estratégico, design atrativo e resultados reais. Atraia, engaje e converta seu público nas principais plataformas.
+                  </p><a class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">Saiba mais</a>
                 </div>
               </div>
             </div>
