--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                 <div class="box-contacts-body">
                   <div class="box-contacts-icon fl-bigmug-line-chat55"></div>
                   <div class="box-contacts-decor"></div>
-                  <p class="box-contacts-link"><a href="mailto:#">contato@ipagenciadigital.tk</a></p>
+                  <p class="box-contacts-link"><a href="mailto:#">contato@ipagenciadigital.tk | ipagenciadigital.tk@gmail.com</a></p>
                 </div>
               </article>
             </div>
