--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
                 <div class="box-contacts-body">
                   <div class="box-contacts-icon fl-bigmug-line-up104"></div>
                   <div class="box-contacts-decor"></div>
-                  <p class="box-contacts-link"><a href="javascript:void(0)">Guaratinguetá-SP | ABC Paulista | Baixada Santista</a></p>
+                  <p class="box-contacts-link"><a href="javascript:void(0)">Guaratinguetá | ABC Paulista | Baixada Santista</a></p>
                 </div>
               </article>
             </div>
@@ -896,7 +896,7 @@
                 <div class="box-contacts-body">
                   <div class="box-contacts-icon fl-bigmug-line-chat55"></div>
                   <div class="box-contacts-decor"></div>
-                  <p class="box-contacts-link"><a href="mailto:#">contato@ipagenciadigital.tk | ipagenciadigital.tk@gmail.com</a></p>
+                  <p class="box-contacts-link"><a href="mailto:#">ipagenciadigital.tk@gmail.com</a></p>
                 </div>
               </article>
             </div>
