--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="col-sm-6 wow fadeInRight" data-wow-delay=".3s">
                   <article class="box-icon-modern box-icon-modern-custom">
                     <div>
-                      <h3 class="box-icon-modern-big-title">E + outros 10 serviços</h3>
+                      <h3 class="box-icon-modern-big-title">E + diversos serviços</h3>
                       <div class="box-icon-modern-decor"></div><a class="button button-lg button-block button-gray-4" href="#modalCta" data-toggle="modal">Entrar em contato</a>
                     </div>
                   </article>
@@ -169,7 +169,7 @@
             <div class="container">
               <div class="row row-30 justify-content-end text-right">
                 <div class="col-sm-7">
-                  <h3 class="wow fadeInLeft">Vamos desenvolver sua próxima ideia?</h3>
+                  <h3 class="wow fadeInLeft"><strong>Vamos desenvolver sua próxima ideia?</strong></h3>
                   <p>Precisa de uma solução única para sua empresa? Nós podemos te ajudar com isso!</p>
                   <div class="group-sm group-middle group justify-content-end"><a class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal">
                     Entrar em contato
@@ -955,7 +955,7 @@
             <div class="container">
               <div class="row row-30 justify-content-end text-right">
                 <div class="col-sm-7">
-                  <h3 class="wow fadeInLeft">Vamos desenvolver sua próxima ideia?</h3>
+                  <h3 class="wow fadeInLeft"><strong>Vamos desenvolver sua próxima ideia?</strong></h3>
                   <p>Precisa de uma solução única para sua empresa? Nós podemos te ajudar com isso!</p>
                   <div class="group-sm group-middle group justify-content-end"><a class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal">
                     Entrar em contato
