--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                       <div class="rd-navbar-share fl-bigmug-line-share27" data-rd-navbar-toggle=".rd-navbar-share-list">
                         <ul class="list-inline rd-navbar-share-list">
                           <li class="rd-navbar-share-list-item" onclick="window.open('https://api.whatsapp.com/send?phone=5511962049665&text=Ol%C3%A1%2C%20vim%20pelo%20seu%20site.')"><a class="icon fa fa-whatsapp" target="_blank" href="https://api.whatsapp.com/send?phone=5511962049665&text=Ol%C3%A1%2C%20vim%20pelo%20seu%20site."></a></li>
-                          <li class="rd-navbar-share-list-item" onclick="window.open('https://www.facebook.com/ipagenciadigital.br')"><a class="icon fa fa-facebook" target="_blank" href="https://www.facebook.com/ipagenciadigital.br"></a></li>
-                          <li class="rd-navbar-share-list-item" onclick="window.open('https://www.instagram.com/ip.agenciadigital/')"><a class="icon fa fa-instagram" target="_blank" href="https://instagram.com/ip.agenciadigital"></a></li>
+                          <li class="rd-navbar-share-list-item" onclick="window.open('https://www.instagram.com/danieldd2889')"><a class="icon fa fa-facebook" target="_blank" href="https://www.facebook.com/ipagenciadigital.br"></a></li>
+                          <li class="rd-navbar-share-list-item" onclick="window.open('https://www.instagram.com/danieldd2889/')"><a class="icon fa fa-instagram" target="_blank" href="https://instagram.com/ip.agenciadigital"></a></li>
                         </ul>
                       </div>
                       <ul class="rd-navbar-nav">
@@ -63,7 +63,7 @@
                         <li class="rd-nav-item"><a class="rd-nav-link" href="#projects">Projetos</a></li>
                         <li class="rd-nav-item"><a class="rd-nav-link" href="#team">Time</a></li>
                         <li class="rd-nav-item"><a class="rd-nav-link" href="#contacts">Contatos</a></li>
-                        <li class="rd-nav-item"><a class="rd-nav-link" href="https://sorteios.ipagenciadigital.tk">Sorteios</a></li>
+                        <!--<li class="rd-nav-item"><a class="rd-nav-link" href="https://sorteios.ipagenciadigital.tk">Sorteios</a></li>-->
                       </ul>
                     </div>
                   </div>
