--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="container">
               <div class="row row-30 justify-content-end text-right">
                 <div class="col-sm-7">
-                  <h3 class="wow fadeInLeft"><strong>Vamos desenvolver sua próxima ideia?</strong></h3>
+                  <h3 class="wow fadeInLeft">Vamos desenvolver sua próxima ideia?</h3>
                   <p>Precisa de uma solução única para sua empresa? Nós podemos te ajudar com isso!</p>
                   <div class="group-sm group-middle group justify-content-end"><a class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal">
                     Entrar em contato
@@ -955,7 +955,7 @@
             <div class="container">
               <div class="row row-30 justify-content-end text-right">
                 <div class="col-sm-7">
-                  <h3 class="wow fadeInLeft"><strong>Vamos desenvolver sua próxima ideia?</strong></h3>
+                  <h3 class="wow fadeInLeft">Vamos desenvolver sua próxima ideia?</h3>
                   <p>Precisa de uma solução única para sua empresa? Nós podemos te ajudar com isso!</p>
                   <div class="group-sm group-middle group justify-content-end"><a class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal">
                     Entrar em contato
@@ -993,10 +993,10 @@
                 </div>
                 <div class="col-sm-6 col-md-4 order-sm-first">
                   <!-- Rights-->
-                  <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> <span>iP Agência Digital an extension of An! Digital Agency.</span>
+                  <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> <span>iP Agência Digital an extension of An! Digital Agency</span>
                   </p>
                 </div>
-                <div class="col-sm-6 col-md-4 text-md-right"><span>Todos os direitos reservados.</span> <span></span>
+                <div class="col-sm-6 col-md-4 text-md-right"><span>Todos os direitos reservados</span> <span></span>
                 </div>
               </div>
             </div>
