--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
                 <div class="box-contacts-body">
                   <div class="box-contacts-icon fl-bigmug-line-cellphone55"></div>
                   <div class="box-contacts-decor"></div>
-                  <p class="box-contacts-link"><a href="tel:#">Estamos no WhatsApp 11 96204-9665</a></p>
+                  <p class="box-contacts-link"><a href="tel:#">WhatsApp<br>11 96204-9665</a></p>
                 </div>
               </article>
             </div>
