--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                       </div>
                       <ul class="rd-navbar-nav">
                         <li class="rd-nav-item active"><a class="rd-nav-link" href="#home">Home</a></li>
-                        <li class="rd-nav-item"><a class="rd-nav-link" href="#services">Serviços</a></li>
-                        <li class="rd-nav-item"><a class="rd-nav-link" href="#projects">Projetos</a></li>
-                        <li class="rd-nav-item"><a class="rd-nav-link" href="#team">Time</a></li>
-                        <li class="rd-nav-item"><a class="rd-nav-link" href="#contacts">Contatos</a></li>
+                        <li class="rd-nav-item"><a class="rd-nav-link" href="#servicos">Serviços</a></li>
+                        <li class="rd-nav-item"><a class="rd-nav-link" href="#projetos">Projetos</a></li>
+                        <li class="rd-nav-item"><a class="rd-nav-link" href="#time">Time</a></li>
+                        <li class="rd-nav-item"><a class="rd-nav-link" href="#contatos">Contatos</a></li>
                         <!--<li class="rd-nav-item"><a class="rd-nav-link" href="https://sorteios.ipagenciadigital.tk">Sorteios</a></li>-->
                       </ul>
                     </div>
@@ -117,7 +117,7 @@
 
       </div>
       <!-- See all services-->
-      <section class="section section-sm section-first bg-default text-center" id="services">
+      <section class="section section-sm section-first bg-default text-center" id="servicos">
         <div class="container">
           <div class="row row-30 justify-content-center">
             <div class="col-md-7 col-lg-5 col-xl-6 text-lg-left wow fadeInUp"><img src="images/index-1-415x592.jpg" alt="" width="415" height="592"/>
@@ -182,7 +182,7 @@
       </section>
 
       <!-- Latest Projects-->
-      <section class="section section-sm section-fluid bg-default text-center" id="projects">
+      <section class="section section-sm section-fluid bg-default text-center" id="projetos">
         <div class="container-fluid">
           <h2 class="wow fadeInLeft">Alguns projetos</h2>
           <p class="quote-jean wow fadeInRight" data-wow-delay=".1s">Nossos mais recentes produtos desenvolvidos para nossos clientes para diferentes finalidades corporativas. Nossa equipe qualificada de designers de interface e desenvolvedores de software está sempre pronta para criar algo único para você.</p>
@@ -667,7 +667,7 @@
       </section>
 
       <!-- Meet The Team-->
-      <section class="section section-sm section-fluid bg-default" id="team">
+      <section class="section section-sm section-fluid bg-default" id="time">
         <div class="container-fluid">
           <h2>Conheça nosso time</h2>
           <div class="row row-sm row-30 justify-content-center">
@@ -870,7 +870,7 @@
 
 
       <!-- Contact information-->
-      <section class="section section-sm bg-default" id="contacts">
+      <section class="section section-sm bg-default" id="contatos">
         <div class="container">
           <div class="row row-30 justify-content-center">
             <div class="col-sm-8 col-md-6 col-lg-4">
