--- a/index.html
+++ b/index.html
@@ -633,14 +633,14 @@
               <div class="row justify-content-center border-2-column offset-top-xl-26">
                 <div class="col-9 col-sm-6">
                   <div class="counter-amy">
-                    <div class="counter-amy-number"><span class="counter">1</span><span class="symbol">k</span>
+                    <div class="counter-amy-number"><span class="counter">200</span><span class="symbol"></span>
                     </div>
                     <h6 class="counter-amy-title">Serviços prestados</h6>
                   </div>
                 </div>
                 <div class="col-9 col-sm-6">
                   <div class="counter-amy">
-                    <div class="counter-amy-number"><span class="counter">40</span>
+                    <div class="counter-amy-number"><span class="counter">32</span>
                     </div>
                     <h6 class="counter-amy-title">Consultorias FREE prestadas</h6>
                   </div>
