--- a/index.html
+++ b/index.html
@@ -622,11 +622,11 @@
         <div class="container">
           <div class="row row-30 row-xl-24 justify-content-center align-items-center align-items-lg-start text-left">
             <div class="col-md-6 col-lg-5 col-xl-4 text-center"><a class="text-img" href="javascript:void(0)">
-                <div id="particles-js"></div><span class="counter">5</span></a></div>
+                <div id="particles-js"></div><span class="counter">4</span></a></div>
             <div class="col-sm-8 col-md-6 col-lg-5 col-xl-4">
               <div class="text-width-extra-small offset-top-lg-24 wow fadeInUp">
                 <h3 class="title-decoration-lines-left">Anos de experiência</h3>
-                <p class="text-gray-500">iP Agência Digital é uma equipe de designers e desenvolvedores de aplicativos e sites altamente experientes que criam software e peças gráficas exclusivas para você.</p>
+                <p class="text-gray-500">A iP Agência Digital é composta por uma equipe multidisciplinar de designers UX/UI e desenvolvedores full stack com ampla experiência no desenvolvimento de aplicações web, mobile e interfaces digitais personalizadas. Atuamos na criação de soluções escaláveis, seguras e centradas no usuário, unindo tecnologia de ponta a um design funcional e exclusivo, alinhado às necessidades estratégicas do seu negócio.</p>
               </div>
             </div>
             <div class="col-sm-10 col-md-8 col-lg-6 col-xl-4 wow fadeInRight" data-wow-delay=".1s">
@@ -878,7 +878,7 @@
                 <div class="box-contacts-body">
                   <div class="box-contacts-icon fl-bigmug-line-cellphone55"></div>
                   <div class="box-contacts-decor"></div>
-                  <p class="box-contacts-link"><a href="tel:#">WhatsApp<br>11 96204-9665</a></p>
+                  <p class="box-contacts-link"><a href="https://api.whatsapp.com/send?phone=5511962049665&text=Ol%C3%A1%2C%20vim%20pelo%20seu%20site."><a class="icon fa fa-whatsapp" target="_blank" href="https://api.whatsapp.com/send?phone=5511962049665&text=Ol%C3%A1%2C%20vim%20pelo%20seu%20site.">WhatsApp<br>11 96204-9665</a></p>
                 </div>
               </article>
             </div>
@@ -896,7 +896,7 @@
                 <div class="box-contacts-body">
                   <div class="box-contacts-icon fl-bigmug-line-chat55"></div>
                   <div class="box-contacts-decor"></div>
-                  <p class="box-contacts-link"><a href="mailto:#">ipagenciadigital.tk@gmail.com</a></p>
+                  <p class="box-contacts-link"><a href="mailto:ipagenciadigital.tk@gmail.com">ipagenciadigital.tk@gmail.com</a></p>
                 </div>
               </article>
             </div>
