--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
                 </div>
               </div>
             </div>
+            <div class="swiper-slide" data-slide-bg="images/slde.jpg">
+              <div class="swiper-slide-caption section-md">
+                <div class="container">
+                  <h1 data-caption-animate="fadeInLeft" data-caption-delay="0" class="text-white"></h1>
+                  <p class="text-width-large text-white" data-caption-animate="fadeInRight" data-caption-delay="100">
+                    </p><a class="button button-primary button-ujarak" href="#modalCta" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200"></a>
+                </div>
+              </div>
+            </div>
           </div>
           <!-- Swiper Pagination-->
           <div class="swiper-pagination__module">
