--- a/index.html
+++ b/index.html
@@ -640,21 +640,21 @@
             </div>
             <div class="col-sm-10 col-md-8 col-lg-6 col-xl-4 wow fadeInRight" data-wow-delay=".1s">
               <div class="row justify-content-center border-2-column offset-top-xl-26">
-                <div class="col-9 col-sm-6">
+                <div class="col-6 col-sm-12">
                   <div class="counter-amy">
                     <div class="counter-amy-number"><span class="counter">200</span><span class="symbol"></span>
                     </div>
                     <h6 class="counter-amy-title">Serviços prestados</h6>
                   </div>
                 </div>
-                <div class="col-9 col-sm-6">
+                <!--<div class="col-9 col-sm-6">
                   <div class="counter-amy">
                     <div class="counter-amy-number"><span class="counter">32</span>
                     </div>
                     <h6 class="counter-amy-title">Consultorias FREE prestadas</h6>
                   </div>
-                </div>
-                <div class="col-12 col-sm-12">
+                </div> -->
+                <div class="col-6 col-sm-12">
                   <div class="counter-amy">
                     <div class="counter-amy-number"><span class="counter">20</span>
                     </div>
@@ -678,7 +678,7 @@
       <!-- Meet The Team-->
       <section class="section section-sm section-fluid bg-default" id="time">
         <div class="container-fluid">
-          <h2>Conheça nosso time</h2>
+          <h2>Conheça quem vai fazer sua idéia possível</h2>
           <div class="row row-sm row-30 justify-content-center">
             <div class="col-md-6 col-lg-5 col-xl-3 wow fadeInRight">
               <!-- Team Classic-->
@@ -689,7 +689,9 @@
                 </div>
               </article>
             </div>
-            <!--<div class="col-md-6 col-lg-5 col-xl-3 wow fadeInDown">
+            <!--
+            ESTES NÃO FAZEM MAIS PARTE DO TIME, PORTANTO ESTÃO DESABILITADOS. MANTIVE O CODIGO PARA ADIÇÕES FUTURAS DE NOVOS INTEGRANTES
+            <div class="col-md-6 col-lg-5 col-xl-3 wow fadeInDown">
   
               <article class="team-classic team-classic-lg"><a class="team-classic-figure" href="https://instagram.com/ricardo.marzanos3"><img src="images/team-12-420x424.jpg" alt="" width="420" height="424"/></a>
                 <div class="team-classic-caption">
