alterado a linha 650 e todo seu escopo

--- a/index.html
+++ b/index.html
@@ -640,27 +640,27 @@
             </div>
             <div class="col-sm-10 col-md-8 col-lg-6 col-xl-4 wow fadeInRight" data-wow-delay=".1s">
               <div class="row justify-content-center border-2-column offset-top-xl-26">
-                <div class="col-6 col-sm-12">
+                <div class="col-9 col-sm-6">
                   <div class="counter-amy">
                     <div class="counter-amy-number"><span class="counter">200</span><span class="symbol"></span>
                     </div>
                     <h6 class="counter-amy-title">Serviços prestados</h6>
                   </div>
                 </div>
-                <!--<div class="col-9 col-sm-6">
-                  <div class="counter-amy">
-                    <div class="counter-amy-number"><span class="counter">32</span>
-                    </div>
-                    <h6 class="counter-amy-title">Consultorias FREE prestadas</h6>
-                  </div>
-                </div> -->
-                <div class="col-6 col-sm-12">
+                <<div class="col-8 col-sm-6">
                   <div class="counter-amy">
                     <div class="counter-amy-number"><span class="counter">20</span>
                     </div>
                     <h6 class="counter-amy-title">Parceiros</h6>
                   </div>
                 </div>
+                <!--<div class="col-12 col-sm-12">
+                  <div class="counter-amy">
+                    <div class="counter-amy-number"><span class="counter">20</span>
+                    </div>
+                    <h6 class="counter-amy-title">Parceiros</h6>
+                  </div>
+                </div>-->
               </div>
             </div>
             <!-- <div class="col-lg-6 col-xl-12 align-self-center">
