--- a/index.html
+++ b/index.html
@@ -654,13 +654,13 @@
                     <h6 class="counter-amy-title">Parceiros</h6>
                   </div>
                 </div>
-                <!--<div class="col-12 col-sm-12">
+                <div class="col-12 col-sm-12">
                   <div class="counter-amy">
-                    <div class="counter-amy-number"><span class="counter">20</span>
+                    <div class="counter-amy-number"><span class="counter">24</span>
                     </div>
-                    <h6 class="counter-amy-title">Parceiros</h6>
+                    <h6 class="counter-amy-title">Horas ao seu dispor</h6>
                   </div>
-                </div>-->
+                </div>
               </div>
             </div>
             <!-- <div class="col-lg-6 col-xl-12 align-self-center">
