--- a/index.html
+++ b/index.html
@@ -647,18 +647,18 @@
                     <h6 class="counter-amy-title">Serviços prestados</h6>
                   </div>
                 </div>
-                <<div class="col-9 col-sm-6">
+                <div class="col-9 col-sm-6">
                   <div class="counter-amy">
-                    <div class="counter-amy-number"><span class="counter">20</span>
+                    <div class="counter-amy-number"><span class="counter">32</span>
                     </div>
-                    <h6 class="counter-amy-title">Parceiros</h6>
+                    <h6 class="counter-amy-title">Consultorias FREE prestadas</h6>
                   </div>
                 </div>
                 <div class="col-12 col-sm-12">
                   <div class="counter-amy">
-                    <div class="counter-amy-number"><span class="counter">24</span>
+                    <div class="counter-amy-number"><span class="counter">20</span>
                     </div>
-                    <h6 class="counter-amy-title">Horas ao seu dispor</h6>
+                    <h6 class="counter-amy-title">Parceiros</h6>
                   </div>
                 </div>
               </div>
@@ -690,7 +690,7 @@
               </article>
             </div>
             <!--
-            ESTES NÃO FAZEM MAIS PARTE DO TIME, PORTANTO ESTÃO DESABILITADOS. MANTIVE O CODIGO PARA ADIÇÕES FUTURAS DE NOVOS INTEGRANTES
+            ESTES
             <div class="col-md-6 col-lg-5 col-xl-3 wow fadeInDown">
   
               <article class="team-classic team-classic-lg"><a class="team-classic-figure" href="https://instagram.com/ricardo.marzanos3"><img src="images/team-12-420x424.jpg" alt="" width="420" height="424"/></a>
